frontend/editor.css
/* ... */
pluto-cell > button.add_cell > span::after {
    /* background-image: url("https://cdn.jsdelivr.net/gh/ionic-team/ionicons@5.5.1/src/svg/add-circle-outline.svg"); */
    background-image: url("https://cdn.jsdelivr.net/gh/ionic-team/ionicons@5.5.1/src/svg/add-outline.svg");
    filter: var(--image-filters);
}
pluto-input > button.input_context_menu ul {
    left: 100%;
    top: -8px;
    margin: 0;
    padding: 0px;
    border-radius: 6px;
    display: grid;
    grid-template-columns: max-content;
    position: absolute;
    border: 1px solid var(--input-context-menu-border-color);
    background-color: var(--input-context-menu-bg-color);
}
@media screen and (min-width: 921px) {
    pluto-input > button.input_context_menu ul {
        left: calc(100% - 3px);
    }
}
@media screen and (max-width: 920px) {
    pluto-input > button.input_context_menu {
        z-index: 31;
    }
    pluto-input > button.input_context_menu ul {
        right: 0px;
        left: unset;
    }
}
.input_context_menu li {
    font-family: "Roboto Mono", system-ui;
    font-size: 0.8rem;
    margin-block-end: 0px;
    letter-spacing: -0.02em;
    color: var(--input-context-menu-li-color);
    position: relative;
    list-style: none;
    padding: 8px;
    height: 32px;
    display: flex;
    align-items: center;
    justify-content: flex-start;
    border-radius: 2px;
}
.input_context_menu li:last-child {
    border-bottom-left-radius: 6px;
    border-bottom-right-radius: 6px;
}
.input_context_menu li:first-child {
    border-top-left-radius: 6px;
    border-top-right-radius: 6px;
}

.input_context_menu li.coming_soon {
    color: var(--input-context-menu-soon-color);
}
.input_context_menu li.coming_soon:hover {
    cursor: not-allowed;
    background-color: var(--input-context-menu-hover-bg-color);
}

.input_context_menu li:hover {
    transition-property: background-color;
    transition-duration: 200ms;
    background-color: var(--input-context-menu-hover-bg-color);
}

.ctx_icon,
.icon {
    --size: 17px;
    width: var(--size);
    height: var(--size);
    margin-top: 1px;
    background-size: var(--size) var(--size);
    background-position: center;
    margin-right: calc(var(--size) / 3);
}

.ctx_icon {
    filter: var(--image-filters);
}
.ctx_icon.show_logs {
    background-image: url("https://cdn.jsdelivr.net/gh/ionic-team/ionicons@5.5.1/src/svg/document-text-outline.svg");
}

.ctx_icon.hide_logs {
    background-image: url("https://cdn.jsdelivr.net/gh/ionic-team/ionicons@5.5.1/src/svg/document-text-outline.svg");
}
.ctx_icon.enable_cell {
    background-image: url("https://cdn.jsdelivr.net/gh/ionic-team/ionicons@5.5.1/src/svg/caret-forward-circle-outline.svg");
}

.ctx_icon.disable_cell {
    background-image: url("https://cdn.jsdelivr.net/gh/ionic-team/ionicons@5.5.1/src/svg/ban-outline.svg");
    background-size: 15px;
    background-repeat: no-repeat;
}
.ctx_icon.delete {
    background-image: url("https://cdn.jsdelivr.net/gh/ionic-team/ionicons@5.5.1/src/svg/close-circle-outline.svg");
}
.ctx_icon.run_as_script {
    background-image: url("https://cdn.jsdelivr.net/gh/ionic-team/ionicons@5.5.1/src/svg/document-lock-outline.svg");
}
.ctx_icon.skip_as_script {
    background-image: url("https://cdn.jsdelivr.net/gh/ionic-team/ionicons@5.5.1/src/svg/document-text-outline.svg");
}

.ctx_icon.copy_output {
    background-image: url("https://cdn.jsdelivr.net/gh/ionic-team/ionicons@5.5.1/src/svg/copy-outline.svg");
}

pluto-input > button.input_context_menu {
    /* top: 3px; */
    /* left: -26px; */
    right: 0px;
    padding: 5px;
}

pluto-input > button.input_context_menu.open {
    opacity: 1;
}

pluto-input > button.input_context_menu > span.icon::after {
    background-image: url("https://cdn.jsdelivr.net/gh/ionic-team/ionicons@5.5.1/src/svg/ellipsis-horizontal-circle-outline.svg");
    filter: var(--image-filters);
}

/* PKG UI */

pkg-status-mark {
    width: 1em;
    height: 1em;
    margin: 0px 0.6em 0px 0.2em;
    display: inline-block;
}
body.nbpkg_disabled pkg-status-mark:not(.disable_pkg) {
    display: none;
}

pkg-status-mark > button {
    margin: 0px;
    padding: 0px;
    border: none;
    background: none;
    cursor: context-menu;
    position: relative;
    top: -0.2em;

    /* background: rgba(127, 176, 76, 0.24);
    border: 3px solid rgba(84, 182, 237, 0);
    border-radius: 5px; */
}

pkg-status-mark > button > span::after {
    display: inline-block;
    content: " " !important;
    background-size: 1.5em;
    height: 1.5em;
    width: 1.5em;

    background-image: url("https://cdn.jsdelivr.net/gh/ionic-team/ionicons@5.5.1/src/svg/time-outline.svg");
    opacity: 0.3;
    filter: var(--image-filters);
}

pkg-status-mark.installed > button > span::after {
    background-image: url("https://cdn.jsdelivr.net/gh/ionic-team/ionicons@5.5.1/src/svg/checkmark-outline.svg");
    /* background-image: url("https://cdn.jsdelivr.net/gh/ionic-team/ionicons@5.5.1/src/svg/cloud-done-outline.svg"); */
    filter: var(--image-filters);
}
pkg-status-mark.busy > button > span::after {
    background-image: url("https://cdn.jsdelivr.net/gh/ionic-team/ionicons@5.5.1/src/svg/sync-outline.svg");
    animation: loadspin 3s ease-in-out infinite;
    filter: var(--image-filters);
}
pkg-status-mark.not_found > button > span::after {
    background-image: url("https://cdn.jsdelivr.net/gh/ionic-team/ionicons@5.5.1/src/svg/cloud-offline-outline.svg");
    opacity: 0.6;
    filter: var(--image-filters);
}
pkg-status-mark.will_be_installed > button > span::after {
    background-image: url("https://cdn.jsdelivr.net/gh/ionic-team/ionicons@5.5.1/src/svg/cloud-download-outline.svg");
    opacity: 0.6;
    filter: var(--image-filters);
}
pkg-status-mark.disable_pkg > button > span::after {
    background-image: url("https://cdn.jsdelivr.net/gh/ionic-team/ionicons@5.5.1/src/svg/chatbox-ellipses-outline.svg");
    opacity: 0.6;
    filter: var(--image-filters);
}
/* ... */

